--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="row">
             <div class="col-md-8 text-start mb-5 mt-5">
               <h3 class="text-white z-index-1 position-relative">Perjalanan Menggapai Kemakmuran Indonesia</h3>
-              <p class="text-white opacity-8 mb-0">Setiap aset dan sumber daya negara harus dikelola secara efektif dan tepat sasaran agar manfaatnya dapat langsung dirasakan oleh seluruh rakyat Indonesia, sesuai dengan upaya mengoptimalkan pengamalan mandat Pasal 33 Ayat 3 Undang Undang Dasar 1945 serta Misi Asta Cita terkait pengelolaan kekayaan negara.</p>
+              <p class="text-white opacity-8 mb-0">Setiap aset dan sumber daya negara harus dikelola secara efektif dan tepat sasaran agar manfaatnya dapat langsung dirasakan oleh seluruh rakyat Indonesia, sesuai dengan upaya mengoptimalkan pengamalan mandat Pasal 33 Ayat 3 Undang Undang Dasar 1945 serta Misi Asta Cita terkait pengelolaan kekayaan negara Indonesia.</p>
             </div>
           </div>
         </div>
